fixed overflow

--- a/src/components/ui/stlye.css
+++ b/src/components/ui/stlye.css
@@ -1,3 +1,3 @@
 .ant-cascader-menu {
-  height: 350px !important;
+  height: fit-content !important;
 }
